# python-package

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: echochamber_cli.py
src/echochamber/: __init__.py  api.py  cli.py  conversations.py  personas.py  utils.py  voices.py
tests/: test_api.py  test_cli.py  test_conversations.py  test_persona.py  test_utils.py  test_voices.py
